--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "lodash": "^4.17.20",
     "ngx-spinner": "^9.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
