--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "lodash": "^4.17.20",
+    "ngx-mask": "^10.0.4",
     "ngx-spinner": "^9.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
